src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Indirect_Reseller_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Field gives list of Partner companies</description>
        <inlineHelpText>If you can&apos;t find the Indirect Reseller, Please select Other and then Write the Indirect Reseller in below field</inlineHelpText>
        <label>Indirect Reseller Company</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
            <filterItems>
                <field>Partner_Company__c.Partner_Type__c</field>
                <operation>equals</operation>
                <value>Indirect Reseller</value>
            </filterItems>
            <filterItems>
                <field>Partner_Company__c.Partner_Type__c</field>
                <operation>equals</operation>
                <value>Value Added Reseller</value>
            </filterItems>
            <filterItems>
                <field>Partner_Company__c.Partner_Type__c</field>
                <operation>equals</operation>
                <value>Service Provider</value>
            </filterItems>
            <filterItems>
                <field>Partner_Company__c.Partner_Type__c</field>
                <operation>equals</operation>
                <value>Alliance Partner</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Partner_Company__c</referenceTo>
        <relationshipLabel>Opportunities (Indirect Reseller Company)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Indirect_Reseller_Name__c</fullName>
        <description>Req #1316. Required for Marketo Sync</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Indirect Reseller Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indirect_Reseller__c</fullName>
        <label>Indirect Reseller</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>STARHUB LIMITED</fullName>
                </value>
                <value>
                    <fullName>ORANGE BUSINESS GROUP</fullName>
                </value>
                <value>
                    <fullName>INTELLISASIA PTE LTD</fullName>
                </value>
                <value>
                    <fullName>HYPER MARKETING (SINGAPORE) PTE LTD</fullName>
                </value>
                <value>
                    <fullName>3D NETWORKS SINGAPORE PTE LTD</fullName>
                </value>
                <value>
                    <fullName>AQUION PTY LTD</fullName>
                </value>
                <value>
                    <fullName>ICT NETWORKS PTY LTD</fullName>
                </value>
                <value>
                    <fullName>SDNBUCKS</fullName>
                </value>
                <value>
                    <fullName>LOGICALIS SPAIN SLU</fullName>
                </value>
                <value>
                    <fullName>CALLISONRTKL</fullName>
                </value>
                <value>
                    <fullName>NSI-TELECOM LTD</fullName>
                </value>
                <value>
                    <fullName>SOL DISTRIBUTION LTD</fullName>
                </value>
                <value>
                    <fullName>LLC NEW SYSTEMS TELECOM</fullName>
                </value>
                <value>
                    <fullName>CJSC ACTIVE TELECOM</fullName>
                </value>
                <value>
                    <fullName>GLOBOTECH NETWORKS INC</fullName>
                </value>
                <value>
                    <fullName>NOOVIS</fullName>
                </value>
                <value>
                    <fullName>BEDROCK TECHNOLOGY PARTNERS</fullName>
                </value>
                <value>
                    <fullName>AKON TECHNOLOGIES LIMITED</fullName>
                </value>
                <value>
                    <fullName>CJSC JET INFOSYSTEMS</fullName>
                </value>
                <value>
                    <fullName>SERVIONICA LTD.</fullName>
                </value>
                <value>
                    <fullName>MASSCOMM INNOVA, S.L.</fullName>
                </value>
                <value>
                    <fullName>FWD-IP</fullName>
                </value>
                <value>
                    <fullName>GIRIT CONTROL AND COMMUNICATION SYS TEMS, LTD.</fullName>
                </value>
                <value>
                    <fullName>MLR NETWORKS</fullName>
                </value>
                <value>
                    <fullName>ECTIVISE SOLUTIONS PTE LTD</fullName>
                </value>
                <value>
                    <fullName>BYTES SYSTEMS INTEGRATION A DIVISION OF BYTES TECHNOLOGY GROUP S.A. (PTY) LTD</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indirect_Reseller_been_Approved_by_Nokia__c</fullName>
        <label>Indirect Reseller been Approved by Nokia</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Influencing_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relates to Marketing Campaign aligned to Partner Programs</description>
        <inlineHelpText>Relates to Marketing Campaign aligned to Partner Programs</inlineHelpText>
        <label>Partner Campaign Name</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Initial_Offer_Planned_Date__c</fullName>
        <description>319:The following fields should be available for standard opportunities</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Initial Offer Planned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Instance__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Instance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsConverted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Req #1316. Required for Marketo Sync</description>
        <label>IsConverted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Auto_Upsell__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Req.#3224, This field is updated by Auto Upsell Code during Upsell opportunity creation. This field is refer in Validation Rule to restrict update of value of &quot;Opportunity Type = Committed Upsell&quot; to any other type value.</description>
        <label>Is Auto Upsell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Automated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>use to differentiate between manual and automated update</description>
        <label>Is Automated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Migrated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Requirement 1354</description>
        <label>Is Migrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L7_Name__c</fullName>
        <description>Req#2567- add L7 Name from Account</description>
        <formula>Account.L7Name__c</formula>
        <label>L7 Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LE_Visibility__c</fullName>
        <description>Select the Opportunity Level (Req:164)</description>
        <label>LE Visibility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Upside</fullName>
                    <color>#9999FF</color>
                    <label>Upside</label>
                </value>
                <value>
                    <fullName>Risk</fullName>
                    <color>#000066</color>
                    <label>Risk</label>
                </value>
                <value>
                    <fullName>Secure</fullName>
                    <color>#6633FF</color>
                    <label>Secure</label>
                </value>
                <value>
                    <fullName>RoP</fullName>
                </value>
                <value>
                    <fullName>Excluded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOA_Level__c</fullName>
        <description>LOA Level filled by the value of LOA level of Active offer</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Approval Level (from Active Offer)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Batch_Update_Period__c</fullName>
        <description>DEM0046193 SF Ticket 197301: BatchOIFupdate to also update PSROs</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Batch Update(Period)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_OTM_Change__c</fullName>
        <description>963: This field will capture latest update on OTMs</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last OTM Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Refresh_OIF__c</fullName>
        <label>Last Refresh On OIFs</label>
        <summarizedField>Order_Intake_Forecast__c.LastModifiedDate</summarizedField>
        <summaryForeignKey>Order_Intake_Forecast__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_User_Modified__c</fullName>
        <description>Used to track the information of last modified user of the opportunity</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last User Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_BG__c</fullName>
        <description>Req 569: User will select Lead BG manually</description>
        <label>Lead BG</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Business_Group_Values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_BU__c</fullName>
        <description>Selection of group within MN to lead on approvals. Mandatory selection from drop-down list if MN or ION are chosen as the Lead BG</description>
        <label>Lead BU</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Lead_BG__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Business_Units</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_ID__c</fullName>
        <description>319:The following fields should be available for standard opportunities</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Lead ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <description>Lead Record type used by PRM team.</description>
        <label>Lead Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Distributor Deal Registration</fullName>
                </value>
                <value>
                    <fullName>Indirect Deal Registration</fullName>
                </value>
                <value>
                    <fullName>Reseller Deal Registration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeanData__Days_In_Stage__c</fullName>
        <label>Days in Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Days_To_Close__c</fullName>
        <formula>CloseDate - DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days To Close (Deprecated)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__OrderNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Last_Run_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reporting Last Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Opportunity_Source__c</fullName>
        <label>Reporting Opportunity Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing Sourced</fullName>
                </value>
                <value>
                    <fullName>Marketing Influenced</fullName>
                </value>
                <value>
                    <fullName>Sales Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Total_Marketing_Touches__c</fullName>
        <externalId>true</externalId>
        <label>Reporting Total Marketing Touches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Won_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reporting Won Number (Deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Routing_Action__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Routing Action</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field connects to the Legal Entity type Account associated with the Opportunity.
11th Jan: changing field label as per recent discussion.</description>
        <label>Account Legal Entity</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Please check if attached account is Legal Entity for added account.</errorMessage>
            <filterItems>
                <field>Account.ParentId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>Data Loader Profile</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Legal_Entity_on_Opportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Likelyhood_to_Win__c</fullName>
        <inlineHelpText>The value represents the chance to be won in %. Get more details for this prediction by going to the Einstein Predicts tab above.</inlineHelpText>
        <label>Likelihood to Win %</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LoA_Level_before_STA__c</fullName>
        <description>Req #2286 : Create new field for Excel Add-In</description>
        <label>Approval Level before STA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A+</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Price__c</fullName>
        <label>Market Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>GEPS</fullName>
                </value>
                <value>
                    <fullName>TXLE</fullName>
                </value>
                <value>
                    <fullName>TEPS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketo_Lead__c</fullName>
        <description>Lead to Opportunity Marketo Id population: PRM report</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Marketo Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_Source__c</fullName>
        <description>Requirement 1354</description>
        <label>Migration Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>fALU</fullName>
                </value>
                <value>
                    <fullName>fNOK</fullName>
                </value>
                <value>
                    <fullName>fCOMP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Modified_User__c</fullName>
        <description>D-1468</description>
        <formula>$User.User_18_Digit_ID__c</formula>
        <label>Modified User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mono_or_Multi_BG__c</fullName>
        <label>Mono or Multi BG</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mono-BG</fullName>
                </value>
                <value>
                    <fullName>Multi-BG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MultiBGException_AllowG2Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click here to enforce G2 Bypass in case of the exceptions: Oppty &gt;= 20M, MultiBG, Contract renewal or nth phase of the running contract</description>
        <inlineHelpText>Click here to enforce G2 Bypass in case of the exceptions: Oppty &gt;= 20M, MultiBG, Contract renewal or nth phase of the running contract</inlineHelpText>
        <label>Multi BG Exception/ Allow G2 Bypass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Multiple_or_Unknown_EC_Activity_Sector__c</fullName>
        <label>Multiple or Unknown EC Activity Sector</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Multiple_or_Unknown_EC_Market_Segment__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ALTERNATE SERVICE PROVIDERS</fullName>
                </value>
                <value>
                    <fullName>CABL - CABLE OPERATORS</fullName>
                </value>
                <value>
                    <fullName>CARRIER NEUTRAL SERVICE PROVIDERS</fullName>
                </value>
                <value>
                    <fullName>DEACTIVATED/INACTIVE ACCOUNTS</fullName>
                </value>
                <value>
                    <fullName>DEACTIVATED CUSTOMER</fullName>
                </value>
                <value>
                    <fullName>END CUSTOMERS</fullName>
                </value>
                <value>
                    <fullName>ENR - MINING</fullName>
                </value>
                <value>
                    <fullName>ENR - OIL &amp; GAS</fullName>
                </value>
                <value>
                    <fullName>ENR - UTELCO</fullName>
                </value>
                <value>
                    <fullName>ENR - UTILITIES</fullName>
                </value>
                <value>
                    <fullName>FIXED MOBILE CONVERGENCE</fullName>
                </value>
                <value>
                    <fullName>FIXED SERVICE PROVIDERS</fullName>
                </value>
                <value>
                    <fullName>GC - DEFENSE</fullName>
                </value>
                <value>
                    <fullName>GC - EDUCATION</fullName>
                </value>
                <value>
                    <fullName>GC - GDBI</fullName>
                </value>
                <value>
                    <fullName>GC - HEALTHCARE</fullName>
                </value>
                <value>
                    <fullName>GC - SAFETY</fullName>
                </value>
                <value>
                    <fullName>GC - SMART CITIES</fullName>
                </value>
                <value>
                    <fullName>GC - SMART GOVERNMENT</fullName>
                </value>
                <value>
                    <fullName>INTERNAL CUSTOMER</fullName>
                </value>
                <value>
                    <fullName>MANU - AGRICULTURE</fullName>
                </value>
                <value>
                    <fullName>MANU - AUTOMOTIVE</fullName>
                </value>
                <value>
                    <fullName>MANU - DISCRETE</fullName>
                </value>
                <value>
                    <fullName>MANU - OTHERS</fullName>
                </value>
                <value>
                    <fullName>MANU - PROCESS INDUSTRY</fullName>
                </value>
                <value>
                    <fullName>MOBILE SERVICE PROVIDERS</fullName>
                </value>
                <value>
                    <fullName>NON CO</fullName>
                </value>
                <value>
                    <fullName>OTEN - BROADCAST AND MEDIA</fullName>
                </value>
                <value>
                    <fullName>OTEN - FINANCIAL SERVICES, BANKS, INSURANCE</fullName>
                </value>
                <value>
                    <fullName>OTEN - HOSPITALITY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multiple_or_Unknown_EC_Country__c</fullName>
        <label>Multiple or Unknown EC Country</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>End_Customer_Information__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua And Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Azores</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius And Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia And Herzegovina</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multiple_or_Unknown_EC_Market_Segment__c</fullName>
        <label>Multiple or Unknown EC Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>End_Customer_Information__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Market_Segment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NF_Facilitator_Notified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to fire WF Email Notification for sending notification to Facilitators. so they can approve and submit for G3</description>
        <label>G3 Facilitator Notified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NF_Facilitator_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to fill it with the corresponding Facilitator based on the Code/Organization
Code : NSNG_OQM
Org Level : 7</description>
        <label>G3 Facilitator User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FacilitatorUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NF_LoA_Bypass__c</fullName>
        <description>Check whether any LoA Bypass condition is selected in Offer Object</description>
        <label>G4/G5 Bypass</label>
        <summaryFilterItems>
            <field>Offer__c.ActiveOffer__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Offer__c.LOA_Bypass__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Offer__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NF_PRE_Tech_Field__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NF_PRE_Tech Field</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSB_IB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>#Req: 2938
			NSB IB Flag for NSB engagement in markets outside GCHN</description>
        <inlineHelpText>This flag is involved as validator in G4 Gate concerning product, service and / or financing provider. 
			Flag needs to be filled by the CT (account manager) manually (for cases in non-GCHN territories.)</inlineHelpText>
        <label>NSB IB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Negative_OIF_EUR__c</fullName>
        <description>Calculating  all OIF EUR Value i.e open and closed category  (Req:136)</description>
        <label>Negative OIF EUR</label>
        <summarizedField>Order_Intake_Forecast__c.OIF_Value_EUR__c</summarizedField>
        <summaryFilterItems>
            <field>Order_Intake_Forecast__c.Forecast_Category__c</field>
            <operation>equals</operation>
            <value>Secure, Risk, Upside, RoP, Excluded, Booked, Cancelled, Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Intake_Forecast__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Negative_OIF__c</fullName>
        <description>Req 307: this will calculate OIF value for all the value of forecast category</description>
        <label>OIF Amount Cancelled</label>
        <summarizedField>Order_Intake_Forecast__c.OIF_Value__c</summarizedField>
        <summaryFilterItems>
            <field>Order_Intake_Forecast__c.Forecast_Category__c</field>
            <operation>equals</operation>
            <value>Secure, Risk, Upside, RoP, Excluded, Booked, Cancelled, Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Intake_Forecast__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NoOfCompetitor__c</fullName>
        <description>Req#2355-Roll up summery to calculate no. of Competitor records against  oppty</description>
        <label>NoOfCompetitor</label>
        <summaryForeignKey>Competitor__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_Loa__c</fullName>
        <defaultValue>false</defaultValue>
        <label>G4 Approved or Contracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Offer_Support_Decision_Maker__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>No Offer Support Decision Maker</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Offer_Support__c</fullName>
        <description>Roll up summary for &apos;No Offer Support&apos; field in Offer --- no longer used on July 2021</description>
        <label>OLD Offer By Pass Count</label>
        <summarizedField>Offer__c.By_Pass_Count__c</summarizedField>
        <summaryFilterItems>
            <field>Offer__c.ActiveOffer__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Offer__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_execute_Decision_maker__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>No Execute Decision Maker</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Approval_Status_Tech_Field__c</fullName>
        <description>Field to hold G4 Rejection Status</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Nokia CPQ Approval Status Tech Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Quote_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>CPQ: This field is used to capture the count of Apttus Quotes under any Opportunity,</description>
        <label>Quote Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Region__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Region (GeoLevel)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
</CustomObject>